--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+header {
+  padding: 3em;
+}
+
+main {
+  margin: 0 auto;
+  width: 40em;
+}
